# zoitei

./: Cargo.toml  README.md  book.toml
.github/workflows/: mdbook.yml  publish.yml
pages/: SUMMARY.md  consonants.md  punctuation.md  romanization.md  vowels.md
src/: SUMMARY.md  consonants.md  elongation.md  intro.md  lib.rs  punctuation.md  romanization.md  script.md  vowels.md
